--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 
 
 :root{
-    --clr-green:  #3671E9;
-    --clr-green2: #6943FF;
+    --clr-blue:  #3671E9;
+    --clr-blue2: #6943FF;
     --clr-dark: #0D0D2B;
     --clr-dark-2: #23233f;
     --clr-white: #ffffff;
@@ -33,14 +33,49 @@ body {
     font-weight: 400;
 }
 
+body.light-mode{
+    background: var(--clr-grey2);
+    color: var(--clr-dark);
+}
+
+
+/* Mode Switch  */
+#mode-switch{
+    position: fixed;
+    right: 1rem;
+    top: 3rem;
+    background: var(--clr-grey2);
+    padding: 0.3rem;
+    border-radius: 5px;
+}
+
+#mode-switch img{
+    width: 1.5rem;
+    transform: rotate(4deg);
+    filter: invert(31%)
+            sepia(84%)
+            saturate(2984%)
+            hue-rotate(239deg)
+            brightness(94%)
+            contrast(117%);
+}
+
+body.light-mode #mode-switch{
+    background: var(--clr-dark-2);
+}
+
+body.light-mode #mode-switch img{
+    filter: invert(1);
+}
+
 main{
     width: 30rem;
-    max-width: 95%;
+    max-width: 90%;
 }
 
 h1 span{
     display: block;
-    color: var(--clr-green);
+    color: var(--clr-blue);
     margin-bottom: 0.5rem;
 }
 
@@ -48,16 +83,24 @@ p{
     color: var(--clr-grey);
 }
 
+body.light-mode p{
+    color: var(--clr-dark-2)
+}
+
 
 /* Form  */
 form{
     margin-block: 2rem 0;
     background: var(--clr-dark-2);
-    border-radius: 20px;
+    border-radius: 1rem;
     padding: 1rem 2rem;
     display: flex;
     flex-direction: column;
     row-gap: 0.5rem;
+}
+
+body.light-mode form{
+    background: var(--clr-grey);
 }
 
 input,
@@ -79,6 +122,10 @@ fieldset{
 label{
     color: var(--clr-grey);
     font-weight: 700;
+}
+
+body.light-mode label{
+    color: var(--clr-dark);
 }
 
 .check-container{
@@ -131,6 +178,11 @@ input[type="checkbox"]{
     transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15);
 }
 
+body.light-mode .knobs::before{
+    background: var(--clr-grey2);
+    color: var(--clr-dark-2);
+}
+
 .knobs::before,
 .layer{
     transform: rotateY(0);
@@ -144,16 +196,28 @@ input[type="checkbox"]{
     z-index: 1;
 }
 
+body.light-mode .layer{
+    background:  var(--clr-dark);
+}
+
 input[type="checkbox"]:checked + .knobs::before{
     content: "YES";
     left: 2.6rem;
     background: var(--clr-dark);
 }
 
+body.light-mode input[type="checkbox"]:checked + .knobs::before{
+    background: var(--clr-grey);
+}
+
 
 input[type="checkbox"]:checked ~ .layer{
     background: var(--clr-grey2);
     transform: rotateY(-180deg);
+}
+
+body.light-mode input[type="checkbox"]:checked ~ .layer{
+    background: var(--clr-dark);
 }
 
 .knobs,
@@ -175,6 +239,14 @@ input[type="number"]{
 
 }
 
+/* body.light-mode input[type="checkbox"]:checked ~ .layer{
+    background: var(--clr-dark);
+} */
+body.light-mode input[type="number"]{
+    background: var(--clr-dark);
+    color: var(--clr-grey);
+}
+
 ::-webkit-inner-spin-button{
     -webkit-appearance: none;
     appearance: none;
@@ -183,7 +255,7 @@ input[type="number"]{
 /* Button  */
 button{
     padding: 10px 10px;
-    background: var(--clr-green2);
+    background: var(--clr-blue2);
     color: inherit;
     border: none;
     border-radius: 5px;
@@ -191,6 +263,10 @@ button{
     font-size: 1.2rem;
     display: block;
     transition: 0.3s ease-in-out;
+}
+
+body.light-mode button{
+    color: var(--clr-white);
 }
 
 button:hover{
@@ -201,6 +277,10 @@ button:hover{
 
 hr{
     border: 1px solid var(--clr-dark-2);
+}
+
+body.light-mode hr{
+    border: 1px solid var(--clr-grey);
 }
 
 
@@ -215,17 +295,30 @@ hr{
 
 .psContainer *{
     background: var(--clr-dark-2);
-    color: var(--clr-green);
+    color: var(--clr-grey2);
     flex-basis: 100%;
     padding-block: 0.5rem 0.7rem;
     text-align: center;
-    flex-wrap: wrap;
     cursor: pointer;
     border-radius: 0.5rem;
 }
 
+body.light-mode .psContainer *{
+    background: var(--clr-grey);
+    color: var(--clr-dark-2);
+}
+
 .psContainer *:active{
     background: var(--clr-dark);
+}
+
+@media (max-width: 37em) {
+    .psContainer{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin-block: 1rem;
+    }
 }
 
 
@@ -238,7 +331,7 @@ hr{
 /* Footer  */
 footer a{
     text-decoration: none;
-    color: var(--clr-green);
+    color: var(--clr-blue);
 }
 
 footer a:hover{
