--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,8 @@
 
 body {
     display: grid;
-    place-items: center;
+    /* place-items: center; */
+    width: 100%;
     min-height: 100vh;
     background: var(--clr-dark);
     color: var(--clr-white);
@@ -33,17 +34,19 @@ body {
     font-weight: 400;
 }
 
-body.light-mode{
-    background: var(--clr-grey2);
-    color: var(--clr-dark);
+main{
+    width: 40rem;
+    max-width: 90%;
+    padding: 2rem;
+    margin: auto;
+    box-shadow: 0 0 0.8rem 0.8rem var(--clr-dark-2);
 }
-
 
 /* Mode Switch  */
 #mode-switch{
     position: fixed;
-    right: 1rem;
-    top: 3rem;
+    right: 1.5rem;
+    top: 2.5rem;
     background: var(--clr-grey2);
     padding: 0.3rem;
     border-radius: 5px;
@@ -60,17 +63,9 @@ body.light-mode{
             contrast(117%);
 }
 
-body.light-mode #mode-switch{
-    background: var(--clr-dark-2);
-}
 
-body.light-mode #mode-switch img{
-    filter: invert(1);
-}
-
-main{
-    width: 30rem;
-    max-width: 90%;
+h1{
+    text-transform: uppercase;
 }
 
 h1 span{
@@ -83,12 +78,8 @@ p{
     color: var(--clr-grey);
 }
 
-body.light-mode p{
-    color: var(--clr-dark-2)
-}
 
-
-/* Form  */
+/* FORM  */
 form{
     margin-block: 2rem 0;
     background: var(--clr-dark-2);
@@ -97,10 +88,6 @@ form{
     display: flex;
     flex-direction: column;
     row-gap: 0.5rem;
-}
-
-body.light-mode form{
-    background: var(--clr-grey);
 }
 
 input,
@@ -124,10 +111,25 @@ label{
     font-weight: 700;
 }
 
-body.light-mode label{
-    color: var(--clr-dark);
+input[type="number"]{
+    width: 4.6rem;
+    height: 2.3rem;
+    padding: 0.5rem;
+    margin-inline-start: 0.5em;
+    border-radius: 6.3rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+    text-align: center;
+    background: var(--clr-grey2);
+
 }
 
+::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+/* Checkbox switch toggle */
 .check-container{
     position: relative;
     top: 50%;
@@ -140,7 +142,6 @@ body.light-mode label{
 .check-container .layer{
     border-radius: 6.3rem;
 }
-
 
 input[type="checkbox"]{
     position: relative;
@@ -178,11 +179,6 @@ input[type="checkbox"]{
     transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15);
 }
 
-body.light-mode .knobs::before{
-    background: var(--clr-grey2);
-    color: var(--clr-dark-2);
-}
-
 .knobs::before,
 .layer{
     transform: rotateY(0);
@@ -196,18 +192,10 @@ body.light-mode .knobs::before{
     z-index: 1;
 }
 
-body.light-mode .layer{
-    background:  var(--clr-dark);
-}
-
 input[type="checkbox"]:checked + .knobs::before{
     content: "YES";
     left: 2.6rem;
     background: var(--clr-dark);
-}
-
-body.light-mode input[type="checkbox"]:checked + .knobs::before{
-    background: var(--clr-grey);
 }
 
 
@@ -216,41 +204,12 @@ input[type="checkbox"]:checked ~ .layer{
     transform: rotateY(-180deg);
 }
 
-body.light-mode input[type="checkbox"]:checked ~ .layer{
-    background: var(--clr-dark);
-}
-
 .knobs,
 .knobs::before,
 .layer{
     transition: 0.3s ease-in;
 }
 
-input[type="number"]{
-    width: 4.6rem;
-    height: 2.3rem;
-    padding: 0.5rem;
-    margin-inline-start: 0.5em;
-    border-radius: 6.3rem;
-    font-size: 1.2rem;
-    font-weight: 700;
-    text-align: center;
-    background: var(--clr-grey2);
-
-}
-
-/* body.light-mode input[type="checkbox"]:checked ~ .layer{
-    background: var(--clr-dark);
-} */
-body.light-mode input[type="number"]{
-    background: var(--clr-dark);
-    color: var(--clr-grey);
-}
-
-::-webkit-inner-spin-button{
-    -webkit-appearance: none;
-    appearance: none;
-}
 
 /* Button  */
 button{
@@ -265,10 +224,6 @@ button{
     transition: 0.3s ease-in-out;
 }
 
-body.light-mode button{
-    color: var(--clr-white);
-}
-
 button:hover{
     transform: translateY(-0.3rem);
     transition: 0.3s ease-in-out;
@@ -277,10 +232,6 @@ button:hover{
 
 hr{
     border: 1px solid var(--clr-dark-2);
-}
-
-body.light-mode hr{
-    border: 1px solid var(--clr-grey);
 }
 
 
@@ -303,24 +254,9 @@ body.light-mode hr{
     border-radius: 0.5rem;
 }
 
-body.light-mode .psContainer *{
-    background: var(--clr-grey);
-    color: var(--clr-dark-2);
-}
-
 .psContainer *:active{
     background: var(--clr-dark);
 }
-
-@media (max-width: 37em) {
-    .psContainer{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        margin-block: 1rem;
-    }
-}
-
 
 /* Copy Notice */
 .copy-notice{
@@ -329,6 +265,9 @@ body.light-mode .psContainer *{
 
 
 /* Footer  */
+footer{
+    margin-inline: auto;
+}
 footer a{
     text-decoration: none;
     color: var(--clr-blue);
@@ -336,4 +275,85 @@ footer a{
 
 footer a:hover{
     text-decoration: overline;
+}
+
+
+/* -----LIGHT MODE-------  */
+body.light-mode{
+    background: var(--clr-grey2);
+    color: var(--clr-dark);
+}
+
+body.light-mode #mode-switch{
+    background: var(--clr-dark-2);
+}
+
+body.light-mode #mode-switch img{
+    filter: invert(1);
+}
+
+body.light-mode main{
+    box-shadow: 0 0 0.2rem 0.2rem var(--clr-grey);
+}
+
+body.light-mode p{
+    color: var(--clr-dark-2)
+}
+
+body.light-mode form{
+    background: var(--clr-grey);
+}
+
+body.light-mode label{
+    color: var(--clr-dark);
+}
+
+body.light-mode .knobs::before{
+    background: var(--clr-grey2);
+    color: var(--clr-dark-2);
+}
+
+body.light-mode .layer{
+    background:  var(--clr-dark);
+}
+
+body.light-mode input[type="checkbox"]:checked + .knobs::before{
+    background: var(--clr-grey);
+}
+
+body.light-mode input[type="checkbox"]:checked ~ .layer{
+    background: var(--clr-dark);
+}
+
+body.light-mode input[type="number"]{
+    background: var(--clr-dark);
+    color: var(--clr-grey);
+}
+
+body.light-mode button{
+    color: var(--clr-white);
+}
+
+body.light-mode hr{
+    border: 1px solid var(--clr-grey);
+}
+
+body.light-mode .psContainer *{
+    background: var(--clr-grey);
+    color: var(--clr-dark-2);
+}
+
+
+/* Mobile Screen  */
+@media (max-width: 37em) {
+    main{
+        width: 30rem;
+        max-width: 950%;
+    }
+    .psContainer{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin-block: 1rem;
+    }
 }
